# smolcode

./: .gitignore  LEARN.md  Makefile  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  context.py  main.py  provider.py  registry.py  schemas.py  session.py  skill.py  subagent.py  tool.py  ui.py
app/agents/: __init__.py  agent.py  agent_prompt.txt  base_agent.py  build.py  plan.py
app/agents/plan/: AGENT.md
app/agents/prompt/: plan.txt
app/backend/: context.py  events.py  protocols.py  registry.py  session.py  utils.py
app/core/: __init__.py  agent.py  context.py  provider.py  session.py  tool.py  types.py
app/plugins/provider/: __init__.py  auth.py  login.py  oauth_token.py
app/plugins/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  skill.py  subagent.py  webfetch.py  write.py
app/provider/: __init__.py  auth.py
app/skills/: code-review.md  python-best-practices.md  skill.py
app/skills/code-review/: SKILL.md
app/subagents/: __init__.py  code.md  explore.md  subagent.py
app/tools/: __init__.py  base_tool.py  bash.py  edit.py  glob.py  grep.py  read.py  webfetch.py  write.py
app/ui/: README.md  null_ui.py  stdin_input.py  terminal_ui.py
app/utils/: config.py  markdown.py  registry.py  schemas.py  ui.py
config/agents/: common.txt
config/skills/python-best-practices/: SKILL.md
config/subagents/code/: SUBAGENT.md
config/subagents/explore/: SUBAGENT.md
tests/: test_markdown_frontmatter.py  test_tool_schema.py  test_ui_markdown.py
